--- a/Style/style.css
+++ b/Style/style.css
@@ -1,10 +1,23 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 h3{
     background: black;
     color: white;
     display: inline-block;
     box-shadow: 3px 3px 5px red;
+    margin-bottom: 20px;
 }
 p{
     background: violet;
     color: blue;
+}
+.im{
+    display: flex;
+    justify-content: center;
+}
+img{
+    height: 400px;
+    margin-top: 40px;
 }
